--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+body{
+    margin: 0;
+}
+
+.container{
+    width: 1096px;
+    margin: auto;
+}
+
+.surface-section{
+    box-shadow: 0 3px 5px rgba(0,0,0,0.2);
+}
