Cambios en repo

--- a/src/app/modules/admin/products/components/product/product.component.html
+++ b/src/app/modules/admin/products/components/product/product.component.html
@@ -1,63 +1,88 @@
-<form [formGroup]="productForm">
+<p-card header="Product detail" styleClass="mt-6">
+ 
+
+
+<form [formGroup]="productForm" (submit)="saveProduct()">
   <div class="formgrid grid mt-5">
     <div class="col-4">
-        <p-galleria [value]="images" [showIndicators]="true" [showThumbnails]="false" [containerStyle]="{ 'max-width': '640px' }">
+        <p-galleria [value]="images" [showIndicators]="true" [showThumbnails]="false" [containerStyle]="{ 'max-width': '640px', }">
           <ng-template pTemplate="item" let-item>
-              <img [src]="item" style="width: 100%; display: block;" />
+              <img [src]="item" style="width: 100%; display: block;height: 300px" />
           </ng-template>
       </p-galleria>
   
-        <button>Add</button>
       </div>
     <div class="col-8 formgrid grid">
-      <div class="field col-12 md:col-12">
-        <label for="productName">Product Name</label>
-        <input
+      <div class="field col-12 md:col-12 mb-5">
+        <!-- <label for="productName">Product Name</label>
+       <input
           id="productName"
           type="text"
           formControlName="title"
           class="text-base text-color surface-overlay p-2 border-round appearance-none outline-none focus:border-primary w-full"
-        />
+        /> -->
+
+        <span class="p-float-label">
+          <input type="text" pInputText class="w-full lg:w-6"  formControlName="title" />
+          <label htmlFor="username">Title</label>
+      </span>
+
+      
       </div>
-      <div class="field col-4">
-        <label for="category">Category</label>
-        <select
-          id="category"
-          formControlName="category"
-          class="w-full text-base text-color surface-overlay p-2 border-solid border-round outline-none focus:border-primary"
-          style="appearance: auto"
-        >
-          <option *ngFor="let category of categories" [value]="category" >{{ category }}</option>
-        </select>
+      <div class="field col-4 mb-5">       
+        <span class="p-float-label">
+          <p-dropdown [options]="categories"  styleClass="w-full"    formControlName="category" ></p-dropdown>
+          <label htmlFor="username">Category</label>
+      </span>
+        
+
       </div>
-      <div class="field col-4">
-        <label for="brand">Brand</label>
-        <input
-          id="brand"
-          type="text"
-          formControlName="brand"
-          class="text-base text-color surface-overlay p-2 border-round appearance-none outline-none focus:border-primary w-full"
-        />
+      <div class="field col-4 mb-5">
+
+        <span class="p-float-label">
+          <input type="text" pInputText  class="w-full" formControlName="brand" />
+          <label htmlFor="brand">Brand</label>
+
+        </span>
       </div>
-      <div class="field col-4">
-        <label for="price">Price</label>
-        <input
-          id="price"
-          type="text"
-          formControlName="price"
-          class="text-base text-color surface-overlay p-2 border-round appearance-none outline-none focus:border-primary w-full"
-        />
+      <div class="field col-4 mb-5">
+
+
+          
+            
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon">$</span>
+              <p-inputNumber inputId="integeronly" styleClass="w-full" formControlName="price"></p-inputNumber>
+             </div>
+           
+     
+   
+     
+     
+
+      
       </div>
-      <div class="field col-12">
-        <label for="description">Description</label>
-        <textarea
-          id="description"
-          type="text"
-          rows="4"
-          formControlName="description"
-          class="text-base text-color surface-overlay p-2 border-round appearance-none outline-none focus:border-primary w-full"
-        ></textarea>
+      <div class="field col-12 mb-5">
+
+        <span class="p-float-label">
+          <textarea rows="5" cols="30" class="w-full" pInputTextarea  formControlName="description"></textarea>
+          <label htmlFor="description">Description</label>
+
+        </span>
+       
+
+       
       </div>
     </div>
   </div>
+  <div class="flex justify-content-end ">
+    <button type="submit" class="justify-end" pButton [label]="'Save'" [icon]="'pi pi-save'"></button>
+</div>
+
 </form>
+
+</p-card>
+
+
+
+<p-toast></p-toast>
