--- a/src/app/shared/components/minicard/minicard.component.html
+++ b/src/app/shared/components/minicard/minicard.component.html
@@ -12,7 +12,7 @@
             </strong>
           </p>
           quantity: {{ this.cart.quantity }}
-          <a href="">Eliminar</a>
+          <a (click)="removeFromCart()">Eliminar</a>
 
         </div>
       </div>
