--- a/src/app/modules/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/modules/auth/pages/layout-page/layout-page.component.html
@@ -1,17 +1,11 @@
-<div class="flex justify-content-center p-5 border">
+<div class="flex justify-content-center p-5">
     <div class="grid">
-        <div class="col-12">
-            <div>
-                <h1>Loggin</h1>
-            </div>
-        </div>
-
         <div class="col-12">
             <div>
                 <app-login-page></app-login-page>
             </div>
         </div>
-        <div class="col-12">
+        <div class="col-12 flex justify-content-center">
             <a routerLink="/store/home">
                 Back to store
             </a>
