--- a/src/app/modules/public/store/pages/product-page/product-page.component.html
+++ b/src/app/modules/public/store/pages/product-page/product-page.component.html
@@ -28,18 +28,25 @@
     <p-divider></p-divider>
     <div>
         Stock: {{ this.product.stock }}
-        <div class="card flex justify-content-center">
-            <p-inputNumber 
-            value="1"
-            suffix=" units"
-            [showButtons]="true" 
-            buttonLayout="horizontal" 
-            spinnerMode="horizontal" 
-            inputId="vertical" 
-            decrementButtonClass="p-button-secondary"
-            incrementButtonClass="p-button-secondary" 
-            incrementButtonIcon="pi pi-plus" 
-            decrementButtonIcon="pi pi-minus"></p-inputNumber>
+        <div>
+            <div>
+                <p-inputNumber 
+                [(ngModel)]="quantity"
+                [showButtons]="true" 
+                buttonLayout="horizontal" 
+                spinnerMode="horizontal" 
+                inputId="vertical" 
+                decrementButtonClass="p-button-secondary"
+                incrementButtonClass="p-button-secondary" 
+                incrementButtonIcon="pi pi-plus" 
+                decrementButtonIcon="pi pi-minus"
+                [min]="1"></p-inputNumber>
+            </div>
+            <div>
+                <p-button
+                label="Add to cart"
+                ></p-button> 
+            </div>
         </div>
     </div>
     <div>
