--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -5,7 +5,7 @@
   <div class="flex justify-content-center">
     <h1>Login</h1>
   </div>
-  <div>
+  <div class="p-fluid">
     <span class="p-float-label">
       <input 
       formControlName="username"
@@ -14,7 +14,7 @@
   </span>
   </div>
   <div class="spacer"></div>
-  <div>
+  <div class="p-fluid">
     <span class="p-float-label">
       <p-password 
       [feedback]="false" 
