Servicio de carrito corregido

--- a/src/app/modules/public/store/pages/cart-page/cart-page.component.html
+++ b/src/app/modules/public/store/pages/cart-page/cart-page.component.html
@@ -12,6 +12,9 @@
                 <p class="m-0">
                     Total : {{ this.total | currency }}
                 </p>
+                <button (click)="clearCart()">
+                    clear
+                </button>
             </p-card>
         </div>
     </div>
