--- a/src/app/modules/public/store/pages/layout-page/layout-page.component.html
+++ b/src/app/modules/public/store/pages/layout-page/layout-page.component.html
@@ -8,7 +8,9 @@
     <a
       [routerLink]="['/store/home']"
       class="p-element flex align-items-center cursor-pointer surface-0 text-900 no-underline"
-      ><i class="pi pi-shopping-bag mr-2"></i>
+      ><i 
+      style="color: #73a461;"
+      class="pi pi-shopping-bag mr-2"></i>
     </a>
     <p-button
       (click)="toggleSidebar()"
@@ -28,7 +30,9 @@
     <a
       [routerLink]="['/store/cart']"
       class="flex align-items-center cursor-pointer surface-0 text-900 no-underline"
-      ><i class="pi pi-shopping-cart m-2"></i>
+      ><i 
+      style="color: #73a461;"
+      class="pi pi-shopping-cart m-2"></i>
     </a>
   </div>
 </div>
