--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -21,7 +21,7 @@
         label="Add"
         icon="pi pi-cart-plus"
         styleClass="p-button-outlined"
-        (onClick)="addToCart(this.product.id?.toString())"
+        (onClick)="addToCart()"
       ></p-button>
       <p-button
         label="View"
