--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
+$rojizo : #921e1e;
+
 body{
     margin: 0;
     background-color: #f2f2f2;
