--- a/src/app/modules/public/store/pages/cart-page/cart-page.component.html
+++ b/src/app/modules/public/store/pages/cart-page/cart-page.component.html
@@ -104,7 +104,7 @@
                 <div class="col-12">
                   <div class="flex justify-content-between">
                     <span>Subtotal:</span>
-                    <span>{{ this.total | currency }}</span>
+                    <span>{{ getTotal() | currency }}</span>
                   </div>
                 </div>
                 <div class="col-12">
@@ -132,3 +132,7 @@
     <div class="col-1"></div>
   </section>
 </div>
+
+
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
