--- a/src/app/modules/public/store/pages/layout-page/layout-page.component.html
+++ b/src/app/modules/public/store/pages/layout-page/layout-page.component.html
@@ -46,6 +46,12 @@
   </p-sidebar>
 </div>
 
-<div>
-    <router-outlet></router-outlet>
+<div class="flex  ">
+ 
+  <div class="flex flex-grow-1 justify-content-center">
+    <div class="p-3">
+      <router-outlet></router-outlet>
+  </div>
+  </div>
 </div>
+
