--- a/src/app/modules/public/store/pages/product-page/product-page.component.html
+++ b/src/app/modules/public/store/pages/product-page/product-page.component.html
@@ -1,6 +1,8 @@
+
+<div class="flex justify-content-center flex-wrap">
+<p-card styleClass="flex">
 <div class="grid p-5">
-  <div class="col-1"></div>
-  <div class="col-5">
+  <div class="col-6">
     <div class="card">
         <p-galleria [value]="images" [showIndicators]="true" [showThumbnails]="false" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '640px' }">
             <ng-template pTemplate="item" let-item>
@@ -9,22 +11,23 @@
         </p-galleria>
     </div>
 </div>
-  <div class="col-5 border">
+  <div class="col-6  px-4">
     <div>
-    <h2>{{ this.product.title  }}</h2>    
+    <h2 class="mt-0">{{ this.product.title  }}</h2>    
     </div>
         <div class="card flex justify-content-start">
             <p-rating [(ngModel)]="value" [readonly]="true" [cancel]="false"></p-rating>
         </div>
     <div class="mt-4 mb-4">
-        <strong>
-            {{ this.product.price | currency }}
-        </strong>
+        <div class="price-section" >
+           <label class="price-amount" [ngClass]="{'lined': this.product.discountPercentage > 0}" >{{ this.product.price | currency }}</label>
+           <label class="price-amount price-discount">{{ getDiscountPrice() | currency }}</label><i class=" p-text-secondary" pBadge style="font-size: 2rem" [value]="'-'+this.product.discountPercentage +'%'"></i>
+        </div>
     </div>
-    <div class="mb-2">{{ this.product.brand }}</div>
-    <div class="mb-2">{{ this.product.category }}</div>
+    <div class="mb-2"><strong class="mr-2">Brand:</strong>{{this.product.brand }}</div>
+    <div class="mb-2"><strong class="mr-2">Category:</strong>{{this.product.category | titlecase }}</div>
     <p-divider></p-divider>
-    <div>{{ this.product.description }}</div>
+    <div style="max-width: 400px;">{{ this.product.description }} Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
     <p-divider></p-divider>
     <div>
         Stock: {{ this.product.stock }}
@@ -43,7 +46,7 @@
                 [min]="1"></p-inputNumber>
             </div>
             <div>
-                <p-button
+                <p-button styleClass="mt-3"
                 label="Add to cart"
                 ></p-button> 
             </div>
@@ -54,5 +57,8 @@
 
     </div>
   </div>
-  <div class="col-1"></div>
+ 
+</div>
+
+</p-card>
 </div>
