--- a/src/app/shared/components/minicard/minicard.component.scss
+++ b/src/app/shared/components/minicard/minicard.component.scss
@@ -18,21 +18,21 @@
     border-radius: 0 5px 5px 0;
 }
 
-:host ::ng-deep p-inputnumber{
+:host ::ng-deep p-inputnumber > span > input{
     height: 25px;
-    font-size: 10px;
+    font-size: 12px;
     padding: 0;
     text-align: center ;
 }
 
-:host ::ng-deep .p-button {
+:host ::ng-deep .button-plus-minus {
     height: 25px;
     background-color: #6A9959;
     color: #fff;
     border-color: #6A9959;
 }
 
-:host ::ng-deep .p-button:hover {
+:host ::ng-deep .button-plus-minus:hover {
     height: 25px;
     background-color: #73a461;
     border-color: #73a461;
